tekton/mario-bot/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    dns.gardener.cloud/dnsnames: 'mario.dogfooding.tekton.dev'
    dns.gardener.cloud/ttl: "3600"
  name: ing
  namespace: mario
spec:
  tls:
  - secretName: mario-dogfooding-tekton-dev-tls
    hosts:
    - mario.dogfooding.tekton.dev
  rules:
  - host: mario.dogfooding.tekton.dev
    http:
      paths:
      - backend:
          serviceName: el-mario-image-builder
          servicePort: 8080
        path: /*
